<resources>
    <string name="app_name">CannonShutter</string>
    <string name="check_float_window_permission">检查悬浮窗权限</string>
    <string name="stop_service">停止服务,关闭所有窗口</string>
    <string name="has_float_permission">可以添加悬浮窗</string>
    <string name="no_float_permission">没有悬浮窗权限</string>
    <string name="go_t0_open_float_ask">前往打开悬浮窗权限吗？</string>
    <string name="close">点击关闭</string>
    <string name="full_screen_touch_able">全屏拦截触摸事件</string>
    <string name="full_screen_touch_disable">全屏不拦截触摸事件</string>
    <string name="not_full_screen_touch_able">非全屏拦截触摸事件</string>
    <string name="not_full_screen_touch_disable">非全屏不拦截触摸事件</string>
    <string name="request_focus_interact_with_input">占用焦点，可以和输入法交互</string>
    <string name="float_fluent_anim">悬浮窗size变化流畅动画</string>
    <string name="back_home">回到桌面</string>
    <string name="follow_move">跟随手势滑动</string>
</resources>
